# rusty-chip8

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  macos.yml  rust.yml  ubuntu.yml  windows.yml
cfg/: config.ini
src/: cpu.rs  display.rs  main.rs
src/chip8_frontend/: bin.rs  config.rs  screen.rs  state.rs
src/chip8_lib/: chip8.rs  config.rs  cpu.rs  display.rs  input.rs  lib.rs
