[package]
name = "rusty_chip8"
version = "0.1.0"
edition = "2021"

[lib]
name = "chip8_lib"
path = "src/chip8_lib/lib.rs"

[[bin]]
name = "chip8_frontend"
path = "src/chip8_frontend/bin.rs"

[build-dependencies]
pkg-config = "0.3.31"

[dependencies]
sdl2 = "0.37.0"
thiserror = "1.0.64"
rand = "0.8.5"
configparser = "3.1.0"
log = "0.4.22"
env_logger = "0.11.5"